8.13
https://github.com/tonikelope/megabasterd/issues/600 

Fix pre-pro bar